# EdgeSync

./: .dockerignore  .envrc  .fslckout  .gitignore  .goreleaser.yml  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MEMORY.md  Makefile  README.md  edgesync.fossil  go.mod  go.sum  go.work  go.work.example  go.work.sum  wrangler.jsonc
.claude/: README.md
.fossil-settings/: ignore-glob
.githooks/: pre-commit
bridge/: README.md  go.mod  go.sum
cli/: README.md  bridge_serve.go  doctor.go  hub_serve.go  notify.go  sync_now.go  sync_start.go
deploy/: Dockerfile  docker-compose.yml  nats.conf
docs/: GETTING-STARTED.md  bridge.md  leaf-agent.md
dst/: crosslink_completeness_test.go  e2e_test.go  event.go  go.mod  go.sum  invariants.go  invariants_test.go  mock_fossil.go  mock_fossil_test.go  network.go  peer_network.go  scenario_test.go  simulator.go  simulator_test.go  tablesync_test.go  tag_branch_test.go
fossil/: .fslckout
go-libfossil/: Makefile  README.md  go.mod  go.sum  integration_cli_test.go  integration_test.go  julian.go  types.go  types_test.go
hub/: clone.go  clone_concurrency_test.go  commit.go  commit_perm_time_test.go  commit_tags_test.go  cross_leaf_test.go  driver.go  hub.go  hub_test.go  nats_transport.go  nats_transport_test.go  repo.go  repo_test.go  users.go  websocket_test.go
iroh-sidecar/: Cargo.toml
iroh-sidecar/src/: acceptor.rs  endpoint.rs  main.rs  server.rs  tunnel.rs
leaf/: README.md  go.mod  go.sum
scripts/: build-docs.sh  gen-llms-txt.sh  release.sh  sync-version.sh
sim/: README.md  agent_clone_test.go  buggify.go  (+24 more)
(+672 files in other folders)
